Fixed sidebar covering content on mobile devices

--- a/master.css
+++ b/master.css
@@ -20,6 +20,12 @@
   left: 30px;
 }
 
+@media (max-width: 768px) {
+  .affix{
+    position: relative;
+  }
+}
+
 .placeholder{
   min-height: 1px;
   visibility: hidden;
